# RRP2-Runner

./: CMakeLists.txt  CMakePresets.json  CMakeSettings.json
include/RRP2/: RRP2.h  RRP2std.h
include/jdevtools/: jdevjsons.h  jdevtools.h  sha256hmac.h  sha512hmac.h
src/: main.cpp
src/RRP2/: CMakeLists.txt
src/RRP2/include/: JDevTools.h  RRP2.h  RRP2std.h
src/RRP2/libin/: RRP2.lib
src/RRP2/src/: RRP2.cpp
